--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,22 +17,22 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      POSTGRES_USER: ${{ secrets.CI_POSTGRES_USER || vars.CI_POSTGRES_USER || 'devops' }}
+      POSTGRES_USER: ${{ vars.CI_POSTGRES_USER || 'devops' }}
+      POSTGRES_DB: ${{ vars.CI_POSTGRES_DB || 'whoknows' }}
       POSTGRES_PASSWORD: ${{ secrets.CI_POSTGRES_PASSWORD || 'devops' }}
-      POSTGRES_DB: ${{ secrets.CI_POSTGRES_DB || vars.CI_POSTGRES_DB || 'whoknows' }}
 
     services:
       postgres:
         image: postgres:16
         env:
-          # Important: env.* does NOT work here, so we repeat the expressions
-          POSTGRES_USER: ${{ secrets.CI_POSTGRES_USER || vars.CI_POSTGRES_USER || 'devops' }}
+          POSTGRES_USER: ${{ vars.CI_POSTGRES_USER || 'devops' }}
+          POSTGRES_DB: ${{ vars.CI_POSTGRES_DB || 'whoknows' }}
           POSTGRES_PASSWORD: ${{ secrets.CI_POSTGRES_PASSWORD || 'devops' }}
-          POSTGRES_DB: ${{ secrets.CI_POSTGRES_DB || vars.CI_POSTGRES_DB || 'whoknows' }}
         ports:
           - 5432:5432
+        # IMPORTANT: secrets må ikke bruges her -> hold den statisk
         options: >-
-          --health-cmd="pg_isready -U ${{ secrets.CI_POSTGRES_USER || vars.CI_POSTGRES_USER || 'devops' }} -d ${{ secrets.CI_POSTGRES_DB || vars.CI_POSTGRES_DB || 'whoknows' }}"
+          --health-cmd="pg_isready -U devops -d whoknows"
           --health-interval=10s
           --health-timeout=5s
           --health-retries=5
@@ -64,7 +64,7 @@ jobs:
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v8
         with:
-          version: v1.60.3
+          version: latest
           args: ./...
 
       - name: Run tests (race + coverage)
@@ -109,21 +109,21 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     env:
-      POSTGRES_USER: ${{ secrets.CI_POSTGRES_USER || vars.CI_POSTGRES_USER || 'devops' }}
+      POSTGRES_USER: ${{ vars.CI_POSTGRES_USER || 'devops' }}
+      POSTGRES_DB: ${{ vars.CI_POSTGRES_DB || 'whoknows' }}
       POSTGRES_PASSWORD: ${{ secrets.CI_POSTGRES_PASSWORD || 'devops' }}
-      POSTGRES_DB: ${{ secrets.CI_POSTGRES_DB || vars.CI_POSTGRES_DB || 'whoknows' }}
 
     services:
       postgres:
         image: postgres:16
         env:
-          POSTGRES_USER: ${{ secrets.CI_POSTGRES_USER || vars.CI_POSTGRES_USER || 'devops' }}
+          POSTGRES_USER: ${{ vars.CI_POSTGRES_USER || 'devops' }}
+          POSTGRES_DB: ${{ vars.CI_POSTGRES_DB || 'whoknows' }}
           POSTGRES_PASSWORD: ${{ secrets.CI_POSTGRES_PASSWORD || 'devops' }}
-          POSTGRES_DB: ${{ secrets.CI_POSTGRES_DB || vars.CI_POSTGRES_DB || 'whoknows' }}
         ports:
           - 5432:5432
         options: >-
-          --health-cmd="pg_isready -U ${{ secrets.CI_POSTGRES_USER || vars.CI_POSTGRES_USER || 'devops' }} -d ${{ secrets.CI_POSTGRES_DB || vars.CI_POSTGRES_DB || 'whoknows' }}"
+          --health-cmd="pg_isready -U devops -d whoknows"
           --health-interval=10s
           --health-timeout=5s
           --health-retries=5
@@ -157,7 +157,7 @@ jobs:
           BASE_URL: http://127.0.0.1:8080
         run: scripts/smoke.sh
 
-      - name: Stop server & upload logs
+      - name: Stop server
         if: always()
         run: |
           if [ -f app.pid ]; then kill "$(cat app.pid)" || true; fi
@@ -199,6 +199,7 @@ jobs:
           push: true
           tags: |
             ghcr.io/gitdengas123456/devops-valgfag:latest
+            ghcr.io/gitdengas123456/devops-valgfag:${{ github.sha }}
 
   # -------------------------
   # Deploy to VM via SSH (compose + .env)
@@ -228,11 +229,11 @@ jobs:
           GF_SECURITY_ADMIN_USER: ${{ secrets.GF_SECURITY_ADMIN_USER }}
           GF_SECURITY_ADMIN_PASSWORD: ${{ secrets.GF_SECURITY_ADMIN_PASSWORD }}
 
-          # If docker-compose.yml uses ${VAR:?} guards, these must exist.
           APP_IMAGE_TAG: ${{ vars.APP_IMAGE_TAG || 'latest' }}
           NODE_EXPORTER_IMAGE: ${{ vars.NODE_EXPORTER_IMAGE || 'prom/node-exporter:latest' }}
           PROMETHEUS_IMAGE: ${{ vars.PROMETHEUS_IMAGE || 'prom/prometheus:latest' }}
           GRAFANA_IMAGE: ${{ vars.GRAFANA_IMAGE || 'grafana/grafana:latest' }}
+
         with:
           host: ${{ vars.PROD_SSH_HOST }}
           username: ${{ vars.PROD_SSH_USER }}
@@ -241,18 +242,8 @@ jobs:
           script: |
             set -e
 
-            if [ -z "${POSTGRES_USER}" ] || [ -z "${POSTGRES_DB}" ] || [ -z "${POSTGRES_PASSWORD}" ]; then
-              echo "Missing POSTGRES_USER/POSTGRES_DB (vars) or POSTGRES_PASSWORD (secret) in environment 'produktion'"
-              exit 1
-            fi
-
-            if [ -z "${SESSION_KEY}" ] || [ -z "${DMI_API_KEY}" ]; then
-              echo "Missing SESSION_KEY or DMI_API_KEY in environment 'produktion'"
-              exit 1
-            fi
-
             echo "==> Going to app folder on VM..."
-            cd ${{ vars.DEPLOY_PATH }}
+            cd "${{ vars.DEPLOY_PATH }}"
 
             echo "==> Sync repo to origin/main..."
             git fetch origin main
@@ -260,25 +251,20 @@ jobs:
 
             echo "==> Writing .env on VM..."
             umask 077
-            cat > .env <<EOF
-            APP_ENV=prod
-            PORT=8080
-
-            POSTGRES_USER=${POSTGRES_USER}
-            POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-            POSTGRES_DB=${POSTGRES_DB}
-
-            SESSION_KEY=${SESSION_KEY}
-            DMI_API_KEY=${DMI_API_KEY}
-
-            GF_SECURITY_ADMIN_USER=${GF_SECURITY_ADMIN_USER}
-            GF_SECURITY_ADMIN_PASSWORD=${GF_SECURITY_ADMIN_PASSWORD}
-
-            APP_IMAGE_TAG=${APP_IMAGE_TAG}
-            NODE_EXPORTER_IMAGE=${NODE_EXPORTER_IMAGE}
-            PROMETHEUS_IMAGE=${PROMETHEUS_IMAGE}
-            GRAFANA_IMAGE=${GRAFANA_IMAGE}
-            EOF
+            : > .env
+            printf '%s=%s\n' "APP_ENV" "prod" >> .env
+            printf '%s=%s\n' "PORT" "8080" >> .env
+            printf '%s=%s\n' "POSTGRES_USER" "${POSTGRES_USER}" >> .env
+            printf '%s=%s\n' "POSTGRES_PASSWORD" "${POSTGRES_PASSWORD}" >> .env
+            printf '%s=%s\n' "POSTGRES_DB" "${POSTGRES_DB}" >> .env
+            printf '%s=%s\n' "SESSION_KEY" "${SESSION_KEY}" >> .env
+            printf '%s=%s\n' "DMI_API_KEY" "${DMI_API_KEY}" >> .env
+            printf '%s=%s\n' "GF_SECURITY_ADMIN_USER" "${GF_SECURITY_ADMIN_USER}" >> .env
+            printf '%s=%s\n' "GF_SECURITY_ADMIN_PASSWORD" "${GF_SECURITY_ADMIN_PASSWORD}" >> .env
+            printf '%s=%s\n' "APP_IMAGE_TAG" "${APP_IMAGE_TAG}" >> .env
+            printf '%s=%s\n' "NODE_EXPORTER_IMAGE" "${NODE_EXPORTER_IMAGE}" >> .env
+            printf '%s=%s\n' "PROMETHEUS_IMAGE" "${PROMETHEUS_IMAGE}" >> .env
+            printf '%s=%s\n' "GRAFANA_IMAGE" "${GRAFANA_IMAGE}" >> .env
             chmod 600 .env
 
             echo "==> Pulling latest image from GHCR..."
