--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,24 +11,29 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  # -------------------------
+  # Build + lint + tests
+  # -------------------------
   build:
     runs-on: ubuntu-latest
+
+    # Use stable CI defaults for DB (no secrets/vars needed to run tests)
     env:
-      POSTGRES_USER: ${{ secrets.CI_POSTGRES_USER || vars.CI_POSTGRES_USER || 'devops' }}
-      POSTGRES_PASSWORD: ${{ secrets.CI_POSTGRES_PASSWORD || vars.CI_POSTGRES_PASSWORD || 'devops' }}
-      POSTGRES_DB: ${{ secrets.CI_POSTGRES_DB || vars.CI_POSTGRES_DB || 'whoknows' }}
+      POSTGRES_USER: devops
+      POSTGRES_PASSWORD: devops
+      POSTGRES_DB: whoknows
 
     services:
       postgres:
         image: postgres:16
         env:
-          POSTGRES_USER: ${{ secrets.CI_POSTGRES_USER || vars.CI_POSTGRES_USER || 'devops' }}
-          POSTGRES_PASSWORD: ${{ secrets.CI_POSTGRES_PASSWORD || vars.CI_POSTGRES_PASSWORD || 'devops' }}
-          POSTGRES_DB: ${{ secrets.CI_POSTGRES_DB || vars.CI_POSTGRES_DB || 'whoknows' }}
+          POSTGRES_USER: devops
+          POSTGRES_PASSWORD: devops
+          POSTGRES_DB: whoknows
         ports:
           - 5432:5432
         options: >-
-          --health-cmd="pg_isready -U $POSTGRES_USER -d $POSTGRES_DB"
+          --health-cmd="pg_isready -U devops -d whoknows"
           --health-interval=10s
           --health-timeout=5s
           --health-retries=5
@@ -38,7 +43,8 @@ jobs:
         go-version: ["1.25.x"]
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Set up Go
         uses: actions/setup-go@v5
@@ -46,6 +52,9 @@ jobs:
           go-version: ${{ matrix.go-version }}
           check-latest: true
           cache: true
+
+      - name: Print go version
+        run: go version
 
       - name: Download dependencies
         run: go mod download
@@ -56,7 +65,7 @@ jobs:
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v8
         with:
-          version: v2.7.2
+          version: v1.60.3
           args: ./...
 
       - name: Run tests (race + coverage)
@@ -68,6 +77,10 @@ jobs:
             -coverpkg=./cmd/server,./handlers,./internal/db \
             -coverprofile=coverage.out
 
+      - name: Show coverage summary
+        if: ${{ always() && hashFiles('coverage.out') != '' }}
+        run: go tool cover -func=coverage.out | sed -n '1,200p'
+
       - name: Upload coverage (artifact)
         if: ${{ hashFiles('coverage.out') != '' }}
         uses: actions/upload-artifact@v4
@@ -75,41 +88,51 @@ jobs:
           name: coverage-${{ matrix.go-version }}
           path: coverage.out
 
+  # -------------------------
+  # Dockerfile lint
+  # -------------------------
   hadolint:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Lint Dockerfile
         uses: hadolint/hadolint-action@v3.1.0
         with:
           dockerfile: Dockerfile
 
+  # -------------------------
+  # Health / smoke test
+  # -------------------------
   healthz:
-    needs: build
     runs-on: ubuntu-latest
+    needs: build
+
     env:
-      POSTGRES_USER: ${{ secrets.CI_POSTGRES_USER || vars.CI_POSTGRES_USER || 'devops' }}
-      POSTGRES_PASSWORD: ${{ secrets.CI_POSTGRES_PASSWORD || vars.CI_POSTGRES_PASSWORD || 'devops' }}
-      POSTGRES_DB: ${{ secrets.CI_POSTGRES_DB || vars.CI_POSTGRES_DB || 'whoknows' }}
+      POSTGRES_USER: devops
+      POSTGRES_PASSWORD: devops
+      POSTGRES_DB: whoknows
 
     services:
       postgres:
         image: postgres:16
         env:
-          POSTGRES_USER: ${{ secrets.CI_POSTGRES_USER || vars.CI_POSTGRES_USER || 'devops' }}
-          POSTGRES_PASSWORD: ${{ secrets.CI_POSTGRES_PASSWORD || vars.CI_POSTGRES_PASSWORD || 'devops' }}
-          POSTGRES_DB: ${{ secrets.CI_POSTGRES_DB || vars.CI_POSTGRES_DB || 'whoknows' }}
+          POSTGRES_USER: devops
+          POSTGRES_PASSWORD: devops
+          POSTGRES_DB: whoknows
         ports:
           - 5432:5432
         options: >-
-          --health-cmd="pg_isready -U $POSTGRES_USER -d $POSTGRES_DB"
+          --health-cmd="pg_isready -U devops -d whoknows"
           --health-interval=10s
           --health-timeout=5s
           --health-retries=5
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Set up Go
         uses: actions/setup-go@v5
@@ -136,7 +159,7 @@ jobs:
           BASE_URL: http://127.0.0.1:8080
         run: scripts/smoke.sh
 
-      - name: Stop server
+      - name: Stop server & upload logs
         if: always()
         run: |
           if [ -f app.pid ]; then kill "$(cat app.pid)" || true; fi
@@ -149,15 +172,90 @@ jobs:
           name: app-log
           path: app.log
 
+  # -------------------------
+  # Compose-based integration (app + Postgres)
+  # -------------------------
+  compose-integration:
+    runs-on: ubuntu-latest
+    needs: build
+
+    env:
+      POSTGRES_USER: devops
+      POSTGRES_PASSWORD: devops
+      POSTGRES_DB: whoknows
+      SESSION_KEY: ci-session-key-0123456789-abcdefghijklmnopqrstuvwxyz
+      DMI_API_KEY: dummy-ci-key
+      APP_ENV: prod
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Build Docker image for CI
+        run: docker build -t ghcr.io/gitdengas123456/devops-valgfag:${{ github.sha }} .
+
+      - name: Write compose .env for CI
+        run: |
+          cat > .env <<EOF
+          APP_IMAGE_TAG=${{ github.sha }}
+          POSTGRES_USER=${POSTGRES_USER}
+          POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+          POSTGRES_DB=${POSTGRES_DB}
+          SESSION_KEY=${SESSION_KEY}
+          DMI_API_KEY=${DMI_API_KEY}
+          APP_ENV=${APP_ENV}
+          NODE_EXPORTER_IMAGE=alpine:3.20
+          PROMETHEUS_IMAGE=alpine:3.20
+          GRAFANA_IMAGE=alpine:3.20
+          GF_SECURITY_ADMIN_USER=admin
+          GF_SECURITY_ADMIN_PASSWORD=admin
+          EOF
+
+      - name: Start app + Postgres with docker compose
+        run: docker compose -f docker-compose.yml up -d whoknows-app postgres_db
+
+      - name: Wait for /readyz
+        run: |
+          for i in $(seq 1 60); do
+            if curl -fsS http://127.0.0.1:8080/readyz | grep -qx 'ready'; then
+              echo "readyz is ready"
+              exit 0
+            fi
+            sleep 1
+          done
+          echo "readyz never became ready" >&2
+          docker compose -f docker-compose.yml logs --no-color --tail=200 >&2 || true
+          exit 1
+
+      - name: Run smoke tests
+        env:
+          BASE_URL: http://127.0.0.1:8080
+        run: scripts/smoke.sh
+
+      - name: Dump compose state on failure
+        if: failure()
+        run: |
+          docker compose -f docker-compose.yml ps || true
+          docker compose -f docker-compose.yml logs --no-color --tail=200 || true
+
+      - name: Tear down compose stack
+        if: always()
+        run: docker compose -f docker-compose.yml down -v
+
+  # -------------------------
+  # Build & push Docker image (only on push to main)
+  # -------------------------
   docker-build:
-    needs: [build, hadolint, healthz]
+    needs: [build, hadolint, healthz, compose-integration]
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     permissions:
       contents: read
       packages: write
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
@@ -173,24 +271,28 @@ jobs:
           push: true
           tags: |
             ghcr.io/gitdengas123456/devops-valgfag:latest
-            ghcr.io/gitdengas123456/devops-valgfag:${{ github.sha }}
 
+  # -------------------------
+  # Deploy to VM via SSH (compose + .env)
+  # -------------------------
   deploy:
     needs: docker-build
     runs-on: ubuntu-latest
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     environment: produktion
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     permissions:
       contents: read
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code (for reference)
+        uses: actions/checkout@v4
 
       - name: Deploy to VM via SSH
         uses: appleboy/ssh-action@v1.1.0
         env:
           POSTGRES_USER: ${{ vars.POSTGRES_USER }}
-          POSTGRES_DB: ${{ vars.POSTGRES_DB }}
           POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+          POSTGRES_DB: ${{ vars.POSTGRES_DB }}
 
           SESSION_KEY: ${{ secrets.SESSION_KEY }}
           DMI_API_KEY: ${{ secrets.DMI_API_KEY }}
@@ -198,42 +300,105 @@ jobs:
           GF_SECURITY_ADMIN_USER: ${{ secrets.GF_SECURITY_ADMIN_USER }}
           GF_SECURITY_ADMIN_PASSWORD: ${{ secrets.GF_SECURITY_ADMIN_PASSWORD }}
 
-          APP_IMAGE_TAG: ${{ vars.APP_IMAGE_TAG || 'latest' }}
-          NODE_EXPORTER_IMAGE: ${{ vars.NODE_EXPORTER_IMAGE || 'prom/node-exporter:latest' }}
-          PROMETHEUS_IMAGE: ${{ vars.PROMETHEUS_IMAGE || 'prom/prometheus:latest' }}
-          GRAFANA_IMAGE: ${{ vars.GRAFANA_IMAGE || 'grafana/grafana:latest' }}
+          APP_IMAGE_TAG: ${{ vars.APP_IMAGE_TAG }}
+          NODE_EXPORTER_IMAGE: ${{ vars.NODE_EXPORTER_IMAGE }}
+          PROMETHEUS_IMAGE: ${{ vars.PROMETHEUS_IMAGE }}
+          GRAFANA_IMAGE: ${{ vars.GRAFANA_IMAGE }}
         with:
           host: ${{ vars.PROD_SSH_HOST }}
           username: ${{ vars.PROD_SSH_USER }}
           key: ${{ secrets.PROD_SSH_KEY }}
-          port: ${{ vars.PROD_SSH_PORT || '22' }}
-          envs: POSTGRES_USER,POSTGRES_DB,POSTGRES_PASSWORD,SESSION_KEY,DMI_API_KEY,GF_SECURITY_ADMIN_USER,GF_SECURITY_ADMIN_PASSWORD,APP_IMAGE_TAG,NODE_EXPORTER_IMAGE,PROMETHEUS_IMAGE,GRAFANA_IMAGE
+          port: ${{ vars.PROD_SSH_PORT }}
           script: |
-            set -euo pipefail
+            set -e
 
-            DEPLOY_PATH="/home/adminuser/DevOps-Valgfag"
-            cd "$DEPLOY_PATH"
+            if [ -z "${POSTGRES_USER}" ] || [ -z "${POSTGRES_DB}" ] || [ -z "${POSTGRES_PASSWORD}" ]; then
+              echo "Missing POSTGRES_USER/POSTGRES_DB (vars) or POSTGRES_PASSWORD (secret) in environment 'produktion'"
+              exit 1
+            fi
 
+            if [ -z "${SESSION_KEY}" ] || [ -z "${DMI_API_KEY}" ]; then
+              echo "Missing SESSION_KEY or DMI_API_KEY in environment 'produktion'"
+              exit 1
+            fi
+
+            echo "==> Going to app folder on VM..."
+            cd ${{ vars.DEPLOY_PATH }}
+
+            echo "==> Sync repo to origin/main..."
             git fetch origin main
             git reset --hard origin/main
 
+            echo "==> Writing .env on VM..."
             umask 077
-            : > .env
-            printf '%s=%s\n' "APP_ENV" "prod" >> .env
-            printf '%s=%s\n' "PORT" "8080" >> .env
-            printf '%s=%s\n' "POSTGRES_USER" "${POSTGRES_USER}" >> .env
-            printf '%s=%s\n' "POSTGRES_PASSWORD" "${POSTGRES_PASSWORD}" >> .env
-            printf '%s=%s\n' "POSTGRES_DB" "${POSTGRES_DB}" >> .env
-            printf '%s=%s\n' "SESSION_KEY" "${SESSION_KEY}" >> .env
-            printf '%s=%s\n' "DMI_API_KEY" "${DMI_API_KEY}" >> .env
-            printf '%s=%s\n' "GF_SECURITY_ADMIN_USER" "${GF_SECURITY_ADMIN_USER}" >> .env
-            printf '%s=%s\n' "GF_SECURITY_ADMIN_PASSWORD" "${GF_SECURITY_ADMIN_PASSWORD}" >> .env
-            printf '%s=%s\n' "APP_IMAGE_TAG" "${APP_IMAGE_TAG}" >> .env
-            printf '%s=%s\n' "NODE_EXPORTER_IMAGE" "${NODE_EXPORTER_IMAGE}" >> .env
-            printf '%s=%s\n' "PROMETHEUS_IMAGE" "${PROMETHEUS_IMAGE}" >> .env
-            printf '%s=%s\n' "GRAFANA_IMAGE" "${GRAFANA_IMAGE}" >> .env
+            cat > .env <<EOF
+            APP_ENV=prod
+            PORT=8080
+
+            POSTGRES_USER=${POSTGRES_USER}
+            POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+            POSTGRES_DB=${POSTGRES_DB}
+
+            SESSION_KEY=${SESSION_KEY}
+            DMI_API_KEY=${DMI_API_KEY}
+
+            GF_SECURITY_ADMIN_USER=${GF_SECURITY_ADMIN_USER}
+            GF_SECURITY_ADMIN_PASSWORD=${GF_SECURITY_ADMIN_PASSWORD}
+
+            APP_IMAGE_TAG=${APP_IMAGE_TAG}
+            NODE_EXPORTER_IMAGE=${NODE_EXPORTER_IMAGE}
+            PROMETHEUS_IMAGE=${PROMETHEUS_IMAGE}
+            GRAFANA_IMAGE=${GRAFANA_IMAGE}
+            EOF
             chmod 600 .env
 
+            echo "==> Checking Postgres credentials against existing volume (if any)..."
+            VOLUME_NAME="$(docker volume ls -q | grep -E '(^postgres-data$|_postgres-data$)' | head -n1 || true)"
+            if [ -n "${VOLUME_NAME}" ]; then
+              echo "Found Postgres volume: ${VOLUME_NAME}; running credential preflight..."
+
+              # Ensure postgres_db is running
+              docker compose up -d postgres_db
+
+              # Wait for postgres_db health
+              echo "Waiting for postgres_db health..."
+              for i in $(seq 1 30); do
+                CID="$(docker compose ps -q postgres_db || true)"
+                if [ -n "${CID}" ]; then
+                  STATUS="$(docker inspect --format='{{.State.Health.Status}}' "${CID}" 2>/dev/null || true)"
+                  if [ "${STATUS}" = "healthy" ]; then
+                    break
+                  fi
+                fi
+                sleep 2
+              done
+
+              CID="$(docker compose ps -q postgres_db || true)"
+              STATUS="$(docker inspect --format='{{.State.Health.Status}}' "${CID}" 2>/dev/null || true)"
+              if [ "${STATUS}" != "healthy" ]; then
+                echo "postgres_db did not become healthy; aborting deploy." >&2
+                exit 1
+              fi
+
+              # IMPORTANT: force TCP auth so password is actually validated
+              if ! docker compose exec -T -e PGPASSWORD="${POSTGRES_PASSWORD}" postgres_db \
+                psql -h 127.0.0.1 -U "${POSTGRES_USER}" -d "${POSTGRES_DB}" -v ON_ERROR_STOP=1 -c "SELECT 1;" >/dev/null; then
+                echo "Postgres credential preflight failed: secrets do not match existing database." >&2
+                exit 1
+              fi
+
+              echo "Postgres credential preflight passed."
+            else
+              echo "No postgres-data volume found (fresh install); skipping credential preflight."
+            fi
+
+            echo "==> Pulling latest image from GHCR..."
             docker compose pull
+
+            echo "==> Starting/restarting compose stack..."
             docker compose up -d --remove-orphans
+
+            echo "==> Cleaning up old images..."
             docker image prune -f
+
+            echo "Deployment finished."
