--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,7 @@ jobs:
       - name: Run golangci-lint
         uses: golangci/golangci-lint-action@v8
         with:
-          version: v2.7.2
+          version: v1.60.3
           args: --timeout=5m ./...
 
       - name: Run tests
@@ -87,11 +87,16 @@ jobs:
           dockerfile: Dockerfile
 
   # -------------------------
-  # Health check
+  # Health check (local)
   # -------------------------
   healthz:
     needs: build
     runs-on: ubuntu-latest
+
+    env:
+      POSTGRES_USER: devops
+      POSTGRES_PASSWORD: devops
+      POSTGRES_DB: whoknows
 
     services:
       postgres:
@@ -101,46 +106,104 @@ jobs:
           POSTGRES_PASSWORD: devops
           POSTGRES_DB: whoknows
         ports: ["5432:5432"]
+        options: >-
+          --health-cmd="pg_isready -U devops -d whoknows"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
 
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v5
         with:
           go-version: "1.25.x"
+          check-latest: true
+          cache: true
 
-      - run: go build -o server ./cmd/server
+      - name: Build server
+        run: go build -o server ./cmd/server
 
-      - run: |
+      - name: Start server + hit /healthz
+        env:
+          DATABASE_URL: postgres://devops:devops@localhost:5432/whoknows?sslmode=disable
+          SESSION_KEY: ci-session-key-0123456789-abcdefghijklmnopqrstuvwxyz
+          DMI_API_KEY: dummy-ci-key
+          APP_ENV: prod
+          PORT: "8080"
+        run: |
           nohup ./server > app.log 2>&1 &
+          echo $! > app.pid
           sleep 2
-          curl -fs http://127.0.0.1:8080/healthz
+          curl -fsS http://127.0.0.1:8080/healthz
+          kill "$(cat app.pid)" || true
 
       - uses: actions/upload-artifact@v4
+        if: always()
         with:
           name: app-log
           path: app.log
 
   # -------------------------
-  # Compose integration
+  # Compose integration (uses docker-compose.yml)
   # -------------------------
   compose-integration:
     needs: build
     runs-on: ubuntu-latest
 
+    env:
+      APP_IMAGE_TAG: ${{ github.sha }}
+      POSTGRES_USER: devops
+      POSTGRES_PASSWORD: devops
+      POSTGRES_DB: whoknows
+      SESSION_KEY: ci-session-key-0123456789-abcdefghijklmnopqrstuvwxyz
+      DMI_API_KEY: dummy-ci-key
+      GF_SECURITY_ADMIN_USER: admin
+      GF_SECURITY_ADMIN_PASSWORD: admin
+
     steps:
       - uses: actions/checkout@v4
-      - run: docker build -t app:test .
-      - run: docker compose up -d
-      - run: curl -fs http://127.0.0.1:8080/readyz
-      - run: docker compose down -v
+
+      - name: Build image with the same tag compose expects
+        run: docker build -t ghcr.io/gitdengas123456/devops-valgfag:${{ github.sha }} .
+
+      - name: Write .env for compose
+        run: |
+          cat > .env <<EOF
+          APP_IMAGE_TAG=${APP_IMAGE_TAG}
+          POSTGRES_USER=${POSTGRES_USER}
+          POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+          POSTGRES_DB=${POSTGRES_DB}
+          SESSION_KEY=${SESSION_KEY}
+          DMI_API_KEY=${DMI_API_KEY}
+          GF_SECURITY_ADMIN_USER=${GF_SECURITY_ADMIN_USER}
+          GF_SECURITY_ADMIN_PASSWORD=${GF_SECURITY_ADMIN_PASSWORD}
+          EOF
+
+      - name: Start app + postgres (compose)
+        run: docker compose up -d whoknows-app postgres_db
+
+      - name: Wait for /readyz
+        run: |
+          for i in $(seq 1 60); do
+            if curl -fsS http://127.0.0.1:8080/readyz | grep -qx 'ready'; then
+              exit 0
+            fi
+            sleep 1
+          done
+          docker compose logs --no-color --tail=200
+          exit 1
+
+      - name: Tear down
+        if: always()
+        run: docker compose down -v
 
   # -------------------------
-  # Docker build
+  # Docker build & push (only on push to main)
   # -------------------------
   docker-build:
     needs: [build, hadolint, healthz, compose-integration]
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
 
     permissions:
       packages: write
@@ -148,6 +211,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+
       - uses: docker/login-action@v3
         with:
           registry: ghcr.io
@@ -156,52 +220,75 @@ jobs:
 
       - uses: docker/build-push-action@v6
         with:
+          context: .
           push: true
-          tags: ghcr.io/gitdengas123456/devops-valgfag:latest
+          tags: |
+            ghcr.io/gitdengas123456/devops-valgfag:latest
 
   # -------------------------
-  # DEPLOY 
+  # Deploy (only on push to main)
   # -------------------------
   deploy:
     needs: docker-build
     runs-on: ubuntu-latest
     environment: produktion
-    if: github.ref == 'refs/heads/main'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
 
     steps:
       - uses: actions/checkout@v4
 
       - name: Deploy to VM via SSH
         uses: appleboy/ssh-action@v1.1.0
-
         env:
+          DEPLOY_PATH: ${{ vars.DEPLOY_PATH }}
           POSTGRES_USER: ${{ vars.POSTGRES_USER }}
           POSTGRES_DB: ${{ vars.POSTGRES_DB }}
+          APP_IMAGE_TAG: ${{ vars.APP_IMAGE_TAG }}
           POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
           SESSION_KEY: ${{ secrets.SESSION_KEY }}
           DMI_API_KEY: ${{ secrets.DMI_API_KEY }}
-          APP_IMAGE_TAG: ${{ vars.APP_IMAGE_TAG }}
-
+          GF_SECURITY_ADMIN_USER: ${{ secrets.GF_SECURITY_ADMIN_USER }}
+          GF_SECURITY_ADMIN_PASSWORD: ${{ secrets.GF_SECURITY_ADMIN_PASSWORD }}
         with:
           host: ${{ vars.PROD_SSH_HOST }}
           username: ${{ vars.PROD_SSH_USER }}
           key: ${{ secrets.PROD_SSH_KEY }}
           port: ${{ vars.PROD_SSH_PORT }}
-
-          envs: POSTGRES_USER,POSTGRES_DB,POSTGRES_PASSWORD,SESSION_KEY,DMI_API_KEY,APP_IMAGE_TAG
+          envs: DEPLOY_PATH,POSTGRES_USER,POSTGRES_DB,POSTGRES_PASSWORD,SESSION_KEY,DMI_API_KEY,GF_SECURITY_ADMIN_USER,GF_SECURITY_ADMIN_PASSWORD,APP_IMAGE_TAG
 
           script: |
             set -e
-            cd ${{ vars.DEPLOY_PATH }}
 
+            if [ -z "${DEPLOY_PATH}" ]; then
+              echo "Missing DEPLOY_PATH (vars) in environment 'produktion'"
+              exit 1
+            fi
+
+            cd "${DEPLOY_PATH}"
+
+            # keep VM in sync with repo
+            git fetch origin main
+            git reset --hard origin/main
+
+            # write .env required by docker-compose.yml
+            umask 077
             cat > .env <<EOF
+            APP_ENV=prod
+            PORT=8080
+
+            APP_IMAGE_TAG=${APP_IMAGE_TAG}
+
             POSTGRES_USER=${POSTGRES_USER}
             POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
             POSTGRES_DB=${POSTGRES_DB}
+
             SESSION_KEY=${SESSION_KEY}
             DMI_API_KEY=${DMI_API_KEY}
-            APP_IMAGE_TAG=${APP_IMAGE_TAG}
+
+            GF_SECURITY_ADMIN_USER=${GF_SECURITY_ADMIN_USER}
+            GF_SECURITY_ADMIN_PASSWORD=${GF_SECURITY_ADMIN_PASSWORD}
             EOF
+            chmod 600 .env
 
             docker compose pull
             docker compose up -d --remove-orphans
